11.DevOps(GitOps)/11.2.GitLab/Manifest/gitlab.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: kube-ops
  labels:
    name: gitlab
spec:
  selector:
    matchLabels:
      name: gitlab
  template:
    metadata:
      name: gitlab
      labels:
        name: gitlab
    spec:
      containers:
        - name: gitlab
          image: sameersbn/gitlab:15.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
            - name: ssh
              containerPort: 22
          volumeMounts:
            - mountPath: /home/git/data
              name: data
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            timeoutSeconds: 1
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitlab-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: kube-ops
  labels:
    name: gitlab
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    name: gitlab
---
# apiVersion: apisix.apache.org/v2beta2
# kind: ApisixRoute
# metadata:
#   name: gitlab
#   namespace: kube-ops
# spec:
#   http:
#     - name: main
#       match:
#         hosts:
#           - git.k8s.local
#         paths:
#           - '/*'
#       backends:
#         - serviceName: gitlab
#           servicePort: 80
