11.DevOps(GitOps)/11.2.GitLab/Manifest/gitlabDashboard-ingress.yaml
# gitlabDashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-dashboard
  namespace: kube-ops
spec:
  ingressClassName: nginx
  rules:
    - host: gitlab.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80
